2015-11-21  Alexei Podtelezhnikov  <apodtele@gmail.com>

	Copy-paste typos.

	* src/ftstring.1: Updated.
	* src/ftstring.c: Updated.

2015-11-19  Alexei Podtelezhnikov  <apodtele@gmail.com>

	Cosmetic improvements.

	* src/ftdiff.c (write_global_info): Do not display zero gamma.
	* src/ftgrid.c (event_gamma_change): Ditto.
	* src/ftview.c (write_header): Ditto.

2015-11-12  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/gblender.c (gblender_reset_key): Fix typo.

2015-11-12  Alexei Podtelezhnikov  <apodtele@gmail.com>

	Define and use GAMMA.

	* src/ftcommon.h (GAMMA): Define new macro.
	* src/ftdiff.c (adisplay_init): Use it.
	* src/ftgrid.c (grid_status_init): Use it.
	* src/ftstring.c (status): Use it.
	* src/ftview.c (status): Use it.

2015-11-11  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftdiff,ftgrid] Default to gamma = 1.8.

	* src/ftcommon.c (FTDemo_Display_New): Do not set gamma.
	* graph/grblit.c (gr_glyph_gamma): Updated.
	* src/ftdiff.c (adisplay_init): Updated.
	* src/ftgrid.c (grid_status_init): Updated.

2015-11-06  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Minor sRGB accuracy update.

	* graph/gblender.c (gblender_set_gamma_table): Updated.

2015-11-06  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview,ftstring] Default to gamma = 1.8.

	* src/ftview.c (status): Updated.
	* src/ftstring.c (status, main): Updated.

2015-10-16  Werner Lemberg  <wl@gnu.org>

	Don't use `aux' as a file name.

	This should be avoided under Windows.
	Problem reported by Dave Arnold <darnold@adobe.com>.

	* src/aux.c, src/aux.h: Renamed to...
	* src/output.c, src/output.h: ... these file names.

	* Makefile, src/ftdump.c, src/ftgrid.c: Updated.

2015-10-04  Werner Lemberg  <wl@gnu.org>

	* Version 2.6.1 released.
	=========================


	Tag sources with `VER-2-6-1'.

	* README: Updated.
	* src/*.1: Updated.

2015-09-13  Werner Lemberg  <wl@gnu.org>

	* Makefile (FT_H): Updated to recent directory changes (#45954).
